# Api-Conversion

./: .env.example  pyproject.toml  requirements.txt
src/api/: conversion_api.py  unified_api.py  web_api.py
src/core/: capability_detector.py
src/utils/: database.py  env_config.py
